--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.7",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "deepmerge": "^4.2.2",
+    "graphql": "^15.4.0",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "apollo": "^2.32.1",
+    "typescript": "^4.1.3"
   }
 }
